# carbonada

./: .env.example  README.md  pyproject.toml  requirements.txt  serve.py
app/: demo.py
data/: README.md
data/interim/: datasetRIVM.xlsx
data/processed/: industry.xlsx  medium-eval.csv  product.xlsx  product_cleaned.xlsx  small-eval.csv  testing.py
docs/: installation.md
notebooks/: 00_make_dataset.ipynb  01_query_by_industry.ipynb  02_evaluation_harness.ipynb  03_bm25_query.ipynb  04_dataset_translation_and_categorization.ipynb  05_query_embedding_llm.ipynb  06_test_endpoint.ipynb
scripts/: update_data.py
src/carbon/: __init__.py  cache.py  dataset.py  embed.py  estimate.py  llm.py  modal_setup.py  resources.py  schemas.py
