[project]
name = "carbon"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alonso Astroza Tagle", email = "alonsoastroza@gmail.com" }
]
dependencies = [
    "openai>=1.40.0",
    "pandas>=2.2.2",
    "jupyter>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/carbon"]
