[project]
name = "carbon"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alonso Astroza Tagle", email = "alonsoastroza@gmail.com" }
]
dependencies = [
    "openai>=1.40.0",
    "pandas>=2.2.2",
    "jupyter>=1.0.0",
    "openpyxl>=3.1.5",
    "loguru>=0.7.2",
    "matplotlib>=3.9.2",
    "python-dotenv>=1.0.1",
    "modal>=0.64.52",
    "streamlit>=1.37.1",
    "scikit-learn>=1.5.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/carbon"]
